Questionanswerer.cs file added
Questionanswerer.cs is the wrapper for the Q&A in the service

--- a/Weetit_webite/Web.config
+++ b/Weetit_webite/Web.config
@@ -49,4 +49,62 @@
   <system.webServer>
      <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_RelationGeneratorServiceInterface" />
+        <binding name="WSHttpBinding_keywordSearchServiceInterface" />
+        <binding name="WSHttpBinding_QAServiceInterface" />
+        <binding name="WSHttpBinding_CompareWithOnePredicateInterface" />
+        <binding name="WSHttpBinding_ComparisonServiceInterface" />
+        <binding name="WSHttpBinding_ProfileConstructorInterface" />
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_RelationGeneratorServiceInterface"
+        contract="ServiceReference1.RelationGeneratorServiceInterface"
+        name="WSHttpBinding_RelationGeneratorServiceInterface">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_keywordSearchServiceInterface"
+        contract="ServiceReference1.keywordSearchServiceInterface" name="WSHttpBinding_keywordSearchServiceInterface">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_QAServiceInterface"
+        contract="ServiceReference1.QAServiceInterface" name="WSHttpBinding_QAServiceInterface">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_CompareWithOnePredicateInterface"
+        contract="ServiceReference1.CompareWithOnePredicateInterface"
+        name="WSHttpBinding_CompareWithOnePredicateInterface">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ComparisonServiceInterface"
+        contract="ServiceReference1.ComparisonServiceInterface" name="WSHttpBinding_ComparisonServiceInterface">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ProfileConstructorInterface"
+        contract="ServiceReference1.ProfileConstructorInterface" name="WSHttpBinding_ProfileConstructorInterface">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
