--- a/Weetit_webite/Weetit_webite.csproj
+++ b/Weetit_webite/Weetit_webite.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -58,6 +60,10 @@
     <Content Include="Account\Register.aspx" />
     <Content Include="answer.aspx" />
     <Content Include="files\ComparissonRegularExpression.txt" />
+    <Content Include="img\220px-WikiBex.jpg" />
+    <Content Include="img\leftarrow.png" />
+    <Content Include="img\rightarrow.png" />
+    <Content Include="img\_46571386_ac_0003130_d_0.jpg" />
     <Content Include="relate.aspx" />
     <Content Include="compare.aspx" />
     <Content Include="img\add.png" />
@@ -76,6 +82,12 @@
     <Content Include="Scripts\UX\default.js" />
     <Content Include="files\Separators.txt" />
     <Content Include="Scripts\UX\defaultpage.js" />
+    <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
+    <None Include="Service References\ServiceReference1\configuration.svcinfo" />
+    <None Include="Service References\ServiceReference1\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Styles\answerpage.css" />
     <Content Include="Styles\comparisonpage.css" />
     <Content Include="Styles\default.css" />
@@ -93,6 +105,21 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <None Include="Service References\ServiceReference1\Weetit_webite.ServiceReference1.PartialAnswer.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference1\Weetit_webite.ServiceReference1.Profile.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference1\Weetit_webite.ServiceReference1.questionAnswer.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference1\Weetit_webite.ServiceReference1.relation.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference1\Weetit_webite.ServiceReference1.ResourceInformation.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account\ChangePassword.aspx.cs">
@@ -164,6 +191,11 @@
     <Compile Include="Secondary.Master.designer.cs">
       <DependentUpon>Secondary.Master</DependentUpon>
     </Compile>
+    <Compile Include="Service References\ServiceReference1\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -171,6 +203,30 @@
   <ItemGroup>
     <Content Include="Account\Web.config" />
     <Content Include="Secondary.Master" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceReference1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ServiceReference1\Arrays.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\mergedServices.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\service.wsdl" />
+    <None Include="Service References\ServiceReference1\service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\System.Collections.Generic.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
