LiteralProfile Handled in backend
+mini micro and full profiles implemented in front end and back end
+Literal profile for literal answers is retrieved in back end

--- a/Web.config
+++ b/Web.config
@@ -52,12 +52,54 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_RelationGeneratorServiceInterface" />
-        <binding name="WSHttpBinding_keywordSearchServiceInterface" />
-        <binding name="WSHttpBinding_QAServiceInterface" />
-        <binding name="WSHttpBinding_CompareWithOnePredicateInterface" />
-        <binding name="WSHttpBinding_ComparisonServiceInterface" />
-        <binding name="WSHttpBinding_ProfileConstructorInterface" />
+        <binding name="WSHttpBinding_RelationGeneratorServiceInterface"
+          closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00"
+          sendTimeout="00:01:00" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
+          maxReceivedMessageSize="65536" useDefaultWebProxy="true" allowCookies="false">
+          <security>
+            <transport realm="" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_keywordSearchServiceInterface" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" allowCookies="false">
+          <security>
+            <transport realm="" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_QAServiceInterface" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" allowCookies="false">
+          <security>
+            <transport realm="" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_ComparisonServiceInterface" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" allowCookies="false">
+          <security>
+            <transport realm="" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_ProfileConstructorInterface" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" allowCookies="false">
+          <security>
+            <transport realm="" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_CompareWithOnePredicateServiceInterface"
+          closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00"
+          sendTimeout="00:01:00" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
+          maxReceivedMessageSize="65536" useDefaultWebProxy="true" allowCookies="false">
+          <security>
+            <transport realm="" />
+          </security>
+        </binding>
       </wsHttpBinding>
     </bindings>
     <client>
@@ -84,9 +126,9 @@
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_CompareWithOnePredicateInterface"
-        contract="ServiceReference1.CompareWithOnePredicateInterface"
-        name="WSHttpBinding_CompareWithOnePredicateInterface">
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_CompareWithOnePredicateServiceInterface"
+        contract="ServiceReference1.CompareWithOnePredicateServiceInterface"
+        name="WSHttpBinding_CompareWithOnePredicateServiceInterface">
         <identity>
           <dns value="localhost" />
         </identity>
