LiteralProfile Handled in Front end
+now all types of profiles are workingin back end and front end

--- a/Web.config
+++ b/Web.config
@@ -52,54 +52,12 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_RelationGeneratorServiceInterface"
-          closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00"
-          sendTimeout="00:01:00" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
-          maxReceivedMessageSize="65536" useDefaultWebProxy="true" allowCookies="false">
-          <security>
-            <transport realm="" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_keywordSearchServiceInterface" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          useDefaultWebProxy="true" allowCookies="false">
-          <security>
-            <transport realm="" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_QAServiceInterface" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          useDefaultWebProxy="true" allowCookies="false">
-          <security>
-            <transport realm="" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_ComparisonServiceInterface" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          useDefaultWebProxy="true" allowCookies="false">
-          <security>
-            <transport realm="" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_ProfileConstructorInterface" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          useDefaultWebProxy="true" allowCookies="false">
-          <security>
-            <transport realm="" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_CompareWithOnePredicateServiceInterface"
-          closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00"
-          sendTimeout="00:01:00" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
-          maxReceivedMessageSize="65536" useDefaultWebProxy="true" allowCookies="false">
-          <security>
-            <transport realm="" />
-          </security>
-        </binding>
+        <binding name="WSHttpBinding_RelationGeneratorServiceInterface" />
+        <binding name="WSHttpBinding_keywordSearchServiceInterface" />
+        <binding name="WSHttpBinding_QAServiceInterface" />
+        <binding name="WSHttpBinding_ComparisonServiceInterface" />
+        <binding name="WSHttpBinding_ProfileConstructorInterface" />
+        <binding name="WSHttpBinding_CompareWithOnePredicateServiceInterface" />
       </wsHttpBinding>
     </bindings>
     <client>
