arborJS libraries added - relation finder logic added

--- a/Web.config
+++ b/Web.config
@@ -47,7 +47,7 @@
   </system.web>
 
   <system.webServer>
-     <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
   <system.serviceModel>
     <bindings>
@@ -58,7 +58,7 @@
           hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288"
           maxReceivedMessageSize="65536000" messageEncoding="Text" textEncoding="utf-8"
           useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
@@ -74,7 +74,7 @@
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
           maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
           textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
@@ -90,7 +90,7 @@
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
           maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
           textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
@@ -107,7 +107,7 @@
           hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288"
           maxReceivedMessageSize="65536000" messageEncoding="Text" textEncoding="utf-8"
           useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
@@ -123,7 +123,7 @@
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
           maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
           textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
@@ -139,7 +139,7 @@
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
           maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
           textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
