GALLERY Button img CHANGED - no img added

--- a/Web.config
+++ b/Web.config
@@ -52,104 +52,12 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_RelationGeneratorServiceInterface"
-          closeTimeout="01:00:00" openTimeout="01:00:00" receiveTimeout="00:10:00"
-          sendTimeout="01:00:00" bypassProxyOnLocal="false" transactionFlow="false"
-          hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288"
-          maxReceivedMessageSize="65536000" messageEncoding="Text" textEncoding="utf-8"
-          useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_keywordSearchServiceInterface" closeTimeout="01:00:00"
-          openTimeout="01:00:00" receiveTimeout="00:10:00" sendTimeout="01:00:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_QAServiceInterface" closeTimeout="01:00:00"
-          openTimeout="01:00:00" receiveTimeout="00:10:00" sendTimeout="01:00:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_CompareWithOnePredicateServiceInterface"
-          closeTimeout="01:00:00" openTimeout="01:00:00" receiveTimeout="00:10:00"
-          sendTimeout="01:00:00" bypassProxyOnLocal="false" transactionFlow="false"
-          hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288"
-          maxReceivedMessageSize="65536000" messageEncoding="Text" textEncoding="utf-8"
-          useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_ComparisonServiceInterface" closeTimeout="01:00:00"
-          openTimeout="01:00:00" receiveTimeout="00:10:00" sendTimeout="01:00:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_ProfileConstructorInterface" closeTimeout="01:00:00"
-          openTimeout="01:00:00" receiveTimeout="00:10:00" sendTimeout="01:00:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536000" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192000" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
-          </security>
-        </binding>
+        <binding name="WSHttpBinding_RelationGeneratorServiceInterface" />
+        <binding name="WSHttpBinding_keywordSearchServiceInterface" />
+        <binding name="WSHttpBinding_QAServiceInterface" />
+        <binding name="WSHttpBinding_CompareWithOnePredicateServiceInterface" />
+        <binding name="WSHttpBinding_ComparisonServiceInterface" />
+        <binding name="WSHttpBinding_ProfileConstructorInterface" />
       </wsHttpBinding>
     </bindings>
     <behaviors>
@@ -163,21 +71,21 @@
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_RelationGeneratorServiceInterface"
         contract="ServiceReference1.RelationGeneratorServiceInterface"
-        name="WSHttpBinding_RelationGeneratorServiceInterface" behaviorConfiguration="EndpointBehaviour">
+        name="WSHttpBinding_RelationGeneratorServiceInterface">
         <identity>
           <dns value="localhost" />
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_keywordSearchServiceInterface"
-        contract="ServiceReference1.keywordSearchServiceInterface" name="WSHttpBinding_keywordSearchServiceInterface" behaviorConfiguration="EndpointBehaviour">
+        contract="ServiceReference1.keywordSearchServiceInterface" name="WSHttpBinding_keywordSearchServiceInterface">
         <identity>
           <dns value="localhost" />
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_QAServiceInterface"
-        contract="ServiceReference1.QAServiceInterface" name="WSHttpBinding_QAServiceInterface" behaviorConfiguration="EndpointBehaviour">
+        contract="ServiceReference1.QAServiceInterface" name="WSHttpBinding_QAServiceInterface">
         <identity>
           <dns value="localhost" />
         </identity>
@@ -185,21 +93,21 @@
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_CompareWithOnePredicateServiceInterface"
         contract="ServiceReference1.CompareWithOnePredicateServiceInterface"
-        name="WSHttpBinding_CompareWithOnePredicateServiceInterface" behaviorConfiguration="EndpointBehaviour">
+        name="WSHttpBinding_CompareWithOnePredicateServiceInterface">
         <identity>
           <dns value="localhost" />
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ComparisonServiceInterface"
-        contract="ServiceReference1.ComparisonServiceInterface" name="WSHttpBinding_ComparisonServiceInterface" behaviorConfiguration="EndpointBehaviour">
+        contract="ServiceReference1.ComparisonServiceInterface" name="WSHttpBinding_ComparisonServiceInterface">
         <identity>
           <dns value="localhost" />
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8732/Design_Time_Addresses/mergedServices/"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ProfileConstructorInterface"
-        contract="ServiceReference1.ProfileConstructorInterface" name="WSHttpBinding_ProfileConstructorInterface" behaviorConfiguration="EndpointBehaviour">
+        contract="ServiceReference1.ProfileConstructorInterface" name="WSHttpBinding_ProfileConstructorInterface">
         <identity>
           <dns value="localhost" />
         </identity>
